--- a/css/style.css
+++ b/css/style.css
@@ -2564,5 +2564,5 @@ li:hover .submit{
 
 		opacity: 1;
 		color: #000;
-		background-image: url(../img/cross.png);
+		background-image: url(../img/cross-big.svg);
 }
